Preparing for migration to H2 in testing DAO
git-svn-id: https://www.silverpeas.org/svn/silverpeas/components/trunk@2567 a8e77078-a1c7-4fa5-b8fc-53c5178a176c